--- a/data/processing.ipynb
+++ b/data/processing.ipynb
@@ -6078,6 +6078,185 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_csv('marieboucher.csv')\n",
+    "table = df.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Marie Boucher', 'St Nicolas, Nantes', 'Commerce ',\n",
+       "       'Hubert Antheaume', 'St Nicolas, Nantes', nan, 'Delalande',\n",
+       "       '4/2E/626', 'procompte', '06/08/1975'], dtype=object)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodeCount = 0\n",
+    "node = set([])\n",
+    "nodes = []\n",
+    "for row in table:\n",
+    "    source = row[0]\n",
+    "    target = row[3]\n",
+    "    if source in node:\n",
+    "        idx = nodes.index(source)\n",
+    "        row[0] = idx\n",
+    "    else:\n",
+    "        node.add(source)\n",
+    "        nodes.append(source)\n",
+    "        row[0] = nodeCount\n",
+    "        nodeCount += 1\n",
+    "    if target in node:\n",
+    "        idx = nodes.index(target)\n",
+    "        row[3] = idx\n",
+    "    else:\n",
+    "        node.add(target)\n",
+    "        nodes.append(target)\n",
+    "        row[3] = nodeCount\n",
+    "        nodeCount += 1\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 'St Nicolas, Nantes', 'Commerce ', 1, 'St Nicolas, Nantes', nan,\n",
+       "       'Delalande', '4/2E/626', 'procompte', '06/08/1975'], dtype=object)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodeTable = []\n",
+    "val = 0\n",
+    "for idx, name in enumerate(nodes):\n",
+    "    if(idx > 100):\n",
+    "        val = 1\n",
+    "    nodeTable.append([idx, name, val])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df= pd.DataFrame(nodeTable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Marie Boucher Nodetable.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[189, 'Nicolas Hotman', 1]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodeTable[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodeCount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "190"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(node)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
